--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,20 +12,41 @@
   </head>
 
   <body>
-    <main class="mx-auto mt-28 px-5 flex">
+    <main class="flex">
         <nav class="flex w-full">
             <div class="w-64 p-4 h-screen bg-gray-700 sticky top-0">
                 <div class="flex">
                     <%= image_tag 'logo.webp', class: 'w-16', alt: 'EcomBuddy Logo' %>
-                    <h1 class= "text-md py-2 text-gray-10 font-bold hidden md:block">
+                    <h1 class= "text-md py-2 text-gray-10 font-bold hidden md:block text-center">
                         Ecomm Admin
                     </h1>
                 </div>
-                <ul class="flex flex-col text-gray-50">
+                <ul class="flex flex-col text-gray-50 pt-4">
                     <li>
-                    <%link_to admin_path, class: "block px-4 py-2 hover:rounded hover:bg-gray-70" %>
-                    <%=icon('fa-solid', 'gauge-high') %><span class="hidden md:inline-block">
-                      Dashboard</span>
+                      <%= link_to admin_path, class: "block px-4 py-2 hover:rounded hover:bg-gray-70" do %>
+                        <%= icon('fa-solid', 'gauge-high', class: 'mr-2') %><span class="hidden md:inline-block">
+                          Dashboard</span>
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to admin_path, class: "block px-4 py-2 hover:rounded hover:bg-gray-70" do %>
+                        <%= icon('fa-solid', 'cart-shopping', class: 'mr-2') %><span class="hidden md:inline-block">
+                          Product</span>
+                        <% end %>
+                    </li>
+                    <li>
+                      <%= link_to admin_path, class: "block px-4 py-2 hover:rounded hover:bg-gray-70" do %>
+                        <%= icon('fa-solid', 'list', class: 'mr-2') %><span class="hidden md:inline-block">
+                          Categories</span>
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to admin_path, class: "block px-4 py-2 hover:rounded hover:bg-gray-70" do %>
+                        <%= icon('fa-solid', 'truck-fast', class: 'mr-2') %><span class="hidden md:inline-block">
+                          Orders</span>
+                      <% end %>
+                    </li>
+                </ul>
             </div>
         </nav>
     
