--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -35,7 +35,7 @@
                         <% end %>
                     </li>
                     <li>
-                      <%= link_to admin_path, class: "block px-4 py-2 hover:rounded hover:bg-gray-600" do %>
+                      <%= link_to admin_categories_path, class: "block px-4 py-2 hover:rounded hover:bg-gray-600" do %>
                         <%= icon('fa-solid', 'list', class: 'mr-2') %><span class="hidden md:inline-block">
                           Categories</span>
                       <% end %>
