--- a/app/views/admin/categories/_category.html.erb
+++ b/app/views/admin/categories/_category.html.erb
@@ -1,4 +1,5 @@
 <div id="<%= dom_id category %>">
+  <%# IDK why this isn't working %>
   <p class="my-5">
     <strong class="block font-medium mb-1">Name:</strong>
     <%= category.name %>
@@ -8,5 +9,11 @@
     <strong class="block font-medium mb-1">Description:</strong>
     <%= category.description %>
   </p>
+
+  <% if action_name != "show" %>
+    <%= link_to "Show this category", [:admin, category], class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to "Edit this category", edit_admin_category_path(category), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <hr class="mt-6">
+  <% end %>
 
 </div>
