fixed categories page working version

--- a/app/views/admin/categories/_category.html.erb
+++ b/app/views/admin/categories/_category.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id category %>">
-  <%# IDK why this isn't working %>
+  <%# IDK why this isn't worki %>
   <p class="my-5">
     <strong class="block font-medium mb-1">Name:</strong>
     <%= category.name %>
