--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -14,7 +14,7 @@
     <% @admin_categories.each do |admin_category| %>
       <%= render admin_category %>
       <p>
-        <%= link_to "Show this category", admin_category, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+        <%= link_to "Show this category", new_admin_category_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
       </p>
     <% end %>
   </div>
