--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <main class="flex">
-        <nav class="flex w-full">
+        <nav class="flex w-1/5">
             <div class="w-64 p-4 h-screen bg-gray-700 sticky top-0">
                 <div class="flex">
                     <%= image_tag 'logo.webp', class: 'w-16', alt: 'EcomBuddy Logo' %>
@@ -49,8 +49,9 @@
                 </ul>
             </div>
         </nav>
-    
+      <div class="p-8">
       <%= yield %>
+      </div>
     </main>
   </body>
 </html>
