added active storage and migrated tables needed for active storage

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -49,7 +49,7 @@
                 </ul>
             </div>
         </nav>
-      <div class="p-8">
+      <div class="w-full p-8">
       <%= yield %>
       </div>
     </main>
