--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -17,16 +17,23 @@
           <thead class="bg-white border-b">
             <tr> 
               <th scope="col" class="text-sm font-medium text-gray-800 px-6 py-4 text-left">
+                
+              </th>
+              <th scope="col" class="text-sm font-medium text-gray-800 px-6 py-4 text-left">
                 Name
               </th>
               <th scope="col" class="text-sm font-medium text-gray-800 px-6 py-4 text-left">
                 Descrption
               </th>
+              
             </tr>
           </thead>
           <tbody>
             <% @admin_categories.each do |c| %>
               <tr class="bg-gray-50 border-b">
+                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 underline">
+                  <%= c.image.present? ? image_tag(c.image.variant(:thumb)) : image_tag("https://placehold.co/50x50") %>
+                </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 underline">
                   <%= link_to c.name, edit_admin_category_path(c) %>
                 </td>
