--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -31,7 +31,7 @@
                     <li>
                       <%= link_to admin_products_path, class: "block px-4 py-2 hover:rounded hover:bg-gray-600" do %>
                         <%= icon('fa-solid', 'cart-shopping', class: 'mr-2') %><span class="hidden md:inline-block">
-                          Product</span>
+                          Products</span>
                         <% end %>
                     </li>
                     <li>
@@ -41,7 +41,7 @@
                       <% end %>
                     </li>
                     <li>
-                      <%= link_to admin_path, class: "block px-4 py-2 hover:rounded hover:bg-gray-600" do %>
+                      <%= link_to admin_products_path, class: "block px-4 py-2 hover:rounded hover:bg-gray-600" do %>
                         <%= icon('fa-solid', 'truck-fast', class: 'mr-2') %><span class="hidden md:inline-block">
                           Orders</span>
                       <% end %>
