--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -43,7 +43,7 @@
                   <%= p.description %>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 underline">
-                  <%= p.description %>
+                  <%= (p.price/100.0).to_s %>
                 </td>
               </tr>
             <% end %>
